--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -3,10 +3,10 @@ name: Test and Lint
 on: 
   workflow_call:
     secrets:
-      DOCKERHUB_USER: ${{ vars.DOCKERHUB_USER }}
+      DOCKERHUB_USER:
         required: true
         description: "Username for DockerHub auth"
-      DOCKERHUB_TOKEN: ${{ vars.DOCKERHUB_TOKEN }}
+      DOCKERHUB_TOKEN:
         required: true
         description: "Token for DockerHub auth"
 
@@ -23,7 +23,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Checkout
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
       
       - name: Test
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
